--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@supports (padding: max(0px)) {
+	body {
+		padding-top: max(0, env(safe-area-inset-top));
+		padding-bottom: max(0, env(safe-area-inset-bottom));
+		padding-left: max(0, env(safe-area-inset-left));
+		padding-right: max(0, env(safe-area-inset-right));
+	}
+}
